# d2s-editor

./: .gitignore  config.py  pyproject.toml
migration/: utils.py
migration/scripts/: update_dat_files.py  update_data_from_decapicator.py
src/bases/: models.py
src/common/: data.py
src/common/constants/: character.py  dirs.py  items.py  monsters.py  skills.py
src/common/utils/: __init__.py
src/models/character/: __init__.py
src/models/item/: __init__.py
