[tool.poetry]
name = "d2s_editor"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
shapely = "^2.0.1"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"
cryptography = "^43.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
